# projeto_streamlit

./: Cadastro.py  Consultar Clientes.py  README.md  clientes.csv  pyproject.toml
pages/: Consultar Clientes.py  Consultar.py
