[tool.poetry]
name = "projeto-pratico-dominando-a-linguagem-python"
version = "0.1.0"
description = ""
authors = ["Mateus Benvenuti <mateusjbenvenuti@gmail.com>"]
readme = "README.md"
package-mode = false  # <== ADICIONE ESTA LINHA

[tool.poetry.dependencies]
python = ">=3.12"
streamlit = ">=1.46.1,<2.0.0"
pandas = ">=2.3.1,<3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
